--- a/playground/index.html
+++ b/playground/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div id="app">
-    <div id="box" style="top: 0; left: 0"></div>
+    <div id="box"></div>
 </div>
 <script type="module" src="./src/main.ts"></script>
 </body>
